<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/menu_file"
        android:icon="@drawable/ic_file"
        android:title="@string/file_menu"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface" />
    
    <item
        android:id="@+id/menu_toggle_controls"
        android:icon="@drawable/ic_visibility"
        android:title="@string/toggle_controls"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface" />
    
    <item
        android:id="@+id/menu_theme"
        android:icon="@drawable/ic_theme"
        android:title="@string/aspetto"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface" />
    
    <item
        android:id="@+id/menu_web_server_indicator"
        android:icon="@drawable/ic_web_server"
        android:title="@string/web_remote_active"
        app:showAsAction="always"
        android:visible="false" />
    
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface" />
</menu>
